<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NovaAssinaturaActivity">

    <TextView
        android:layout_marginTop="10sp"
        android:textAlignment="center"
        android:padding="10sp"
        android:textSize="15sp"
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricaoNovaAssinatura" />

    <TextView
        android:layout_marginTop="50sp"
        android:padding="10sp"
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_atendente" />

    <EditText
        android:padding="10sp"
        android:id="@+id/edtNomeAtendente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_do_atendenteHINT"
        android:inputType="textPersonName" />

    <TextView
        android:layout_marginTop="50sp"
        android:padding="10sp"
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_da_outra_parte" />

    <EditText
        android:padding="10sp"
        android:id="@+id/edtNomeOutro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_da_outra_parteHINT"
        android:inputType="textPersonName" />

    <TextView
        android:layout_marginTop="50sp"
        android:padding="10sp"
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descri_o_do_assunto" />

    <EditText
        android:gravity="top"
        android:minLines="6"
        android:lines="8"
        android:maxLines="10"
        android:padding="10sp"
        android:id="@+id/edtDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descricaoHINT"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnCriarAssinatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assinar" />
</LinearLayout>